--- a/HeatExchangeApp/Views/Home/Index.cshtml
+++ b/HeatExchangeApp/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Расчёт теплообмена в противоточном слое (УрФУ)";
+    ViewData["Title"] = "Расчёт теплообмена в противоточном слое ";
 }
 
 <!DOCTYPE html>
